--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: cron
     name: iyha-room-checker
     runtime: python
+    pythonVersion: "3.11.0"
     schedule: "0 * * * *"
     buildCommand: pip install -r requirements.txt && playwright install chromium && playwright install-deps chromium
     startCommand: python checker.py
