--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: iyha-room-checker
     runtime: python
     pythonVersion: "3.11.0"
-    schedule: "0 * * * *"
+    schedule: "0 7,9,11,13,15,17,19,21,23 * * *"
+    buildCommand: pip install -r requirements.txt
     startCommand: python checker.py
     envVars:
       - key: GMAIL_USER
